src/objects/VPSVP_Mapping__mdt/VPSVP_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>VPSVP Mapping Meta data for Loaner approval Process</description>
    <label>VPSVP Mapping</label>
    <pluralLabel>VPSVP Mappings</pluralLabel>
</CustomObject>