src/objects/VPSVP_Mapping__mdt/fields/RSMName__c.field-meta.xml
<CustomField>
    <fullName>RSMName__c</fullName>
    <label>RSM Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>