src/objects/VPSVP_Mapping__mdt/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <label>SVP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>