src/objects/VPSVP_Mapping__mdt/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <label>VP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>