src/objects/VPSVP_Mapping__mdt/listViews/VPSVP.listView-meta.xml
<ListView>
    <fullName>VPSVP</fullName>
    <columns>MasterLabel</columns>
    <columns>RSMName__c</columns>
    <columns>SVP__c</columns>
    <columns>VP__c</columns>
    <filterScope>Everything</filterScope>
    <label>VPSVP</label>
</ListView>